# lidar-camera-calibration-capture

./: .dockerignore  .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
docker/calibration-capture/: Dockerfile  entrypoint.sh  livox_custom_to_pointcloud2.py
docker/calibration-capture/livox_ros_driver2/: CMakeLists.txt  package.xml
docker/calibration-capture/livox_ros_driver2/msg/: CustomMsg.msg  CustomPoint.msg
docs/: PUBLIC_RELEASE_CHECKLIST.md
scripts/: calibration_capture.sh
