<?xml version="1.0"?>
<package format="2">
  <name>livox_ros_driver2</name>
  <version>1.0.0</version>
  <description>Minimal Livox ROS1 message package for calibration bag capture.</description>
  <maintainer email="dev@livoxtech.com">Livox Dev Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
